--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "author": "YaoTonq <yat529@gmail.com>",
   "private": true,
   "scripts": {
-    "dev": "nuxt --hostname 192.168.1.32 --port 3000",
+    "wifi": "nuxt --hostname 192.168.1.32 --port 3000",
+    "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
